force-app/main/default/objects/Opportunity/fields/Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Accept_Date__c</fullName>
    <label>Accept Date</label>
    <type>Date</type>
</CustomField>