force-app/main/default/objects/Opportunity/fields/Accord_Customers_Invited__c.field-meta.xml
<CustomField>
    <fullName>Accord_Customers_Invited__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <label>Accord Customers Invited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>