force-app/main/default/objects/Opportunity/fields/Accord_Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Accord_Health_Score__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <label>Accord Health Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>