force-app/main/default/objects/Opportunity/fields/Accord_Health_Score_String__c.field-meta.xml
<CustomField>
    <fullName>Accord_Health_Score_String__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <label>Accord Health Score String</label>
    <length>20</length>
    <type>Text</type>
</CustomField>