force-app/main/default/objects/Opportunity/fields/Accord_Progress__c.field-meta.xml
<CustomField>
    <fullName>Accord_Progress__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <inlineHelpText>Percent completion</inlineHelpText>
    <label>Accord Progress</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>