force-app/main/default/objects/Opportunity/fields/Accord_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>Accord_Stage_Name__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <label>Accord Stage Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>