force-app/main/default/objects/Opportunity/fields/Accord_URL__c.field-meta.xml
<CustomField>
    <fullName>Accord_URL__c</fullName>
    <description>Bi-directional sync with Accord</description>
    <label>Accord URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>