force-app/main/default/objects/Opportunity/fields/Account_Renewal_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Account_Renewal_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pulled directly from account level when the renewal specialist field is updated or filled in.</description>
    <label>Account Renewal Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>aRenewalSpecialist</relationshipName>
    <type>Lookup</type>
</CustomField>