force-app/main/default/objects/Opportunity/fields/Account_Tier__c.field-meta.xml
<CustomField>
    <fullName>Account_Tier__c</fullName>
    <description>Pulls the Tier field from the Account onto all opportunities for that Accoount</description>
    <formula>Text(Account.Tier__c)</formula>
    <inlineHelpText>Pulls the Tier field from the Account onto all opportunities for that Accoount</inlineHelpText>
    <label>Account Tier</label>
    <type>Text</type>
</CustomField>