force-app/main/default/objects/Opportunity/fields/ADR__c.field-meta.xml
<CustomField>
    <fullName>ADR__c</fullName>
    <description>Update this field when the user that creates the opportunity has a role of BDR or SDR</description>
    <label>SDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>