force-app/main/default/objects/Opportunity/fields/ADR_User_Lookup__c.field-meta.xml
<CustomField>
    <fullName>ADR_User_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDR User Lookup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>