force-app/main/default/objects/Opportunity/fields/All_Competitors__c.field-meta.xml
<CustomField>
    <fullName>All_Competitors__c</fullName>
    <description>as of 6/20/2019 - Pulled from the Competitors object related to the opportunity
Before then it was a multi-select picklist
Integrated with Klue to provide Klue Battlecards</description>
    <inlineHelpText>Pulled from the Competitors object related to the opportunity</inlineHelpText>
    <label>All Competitors</label>
    <length>255</length>
    <type>Text</type>
</CustomField>