force-app/main/default/objects/Opportunity/fields/Alliance_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alliance Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>