force-app/main/default/objects/Opportunity/fields/Alliance_Rep_1_Split__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_1_Split__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Alliance Rep 1 Split %</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>