force-app/main/default/objects/Opportunity/fields/Alliance_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Alliance_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alliance Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>