force-app/main/default/objects/Opportunity/fields/ambition__timestamp_for_unittest__c.field-meta.xml
<CustomField>
    <fullName>ambition__timestamp_for_unittest__c</fullName>
    <label>timestamp_for_unittest</label>
    <type>DateTime</type>
</CustomField>