force-app/main/default/objects/Opportunity/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <description>Total 12-month value of all recurring products on this Opportunity.</description>
    <inlineHelpText>Total 12-month value of all recurring products on this Opportunity.</inlineHelpText>
    <label>Annual Recurring Revenue</label>
    <summarizedField>OpportunityLineItem.Annual_Recurring_Revenue__c</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>