force-app/main/default/objects/Opportunity/fields/Annual_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscription_Fee__c</fullName>
    <formula>Monthly_Subscription_Fee__c *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>