force-app/main/default/objects/Opportunity/fields/AnnualRecurringRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRecurringRevenue__c</fullName>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>