force-app/main/default/objects/Opportunity/fields/API_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>API_Record_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>API Record ID</label>
    <type>Text</type>
</CustomField>