force-app/main/default/objects/Opportunity/fields/ARPS__c.field-meta.xml
<CustomField>
    <fullName>ARPS__c</fullName>
    <formula>MRR__c / Subscribers__c</formula>
    <label>ARPS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>