force-app/main/default/objects/Opportunity/fields/ARR_Bookings__c.field-meta.xml
<CustomField>
    <fullName>ARR_Bookings__c</fullName>
    <formula>(Monthly_Subscription_Fee__c *12) -  Credit_Subtract__c +  Credit_Add__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR (Bookings)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>