force-app/main/default/objects/Opportunity/fields/ARR_Growth__c.field-meta.xml
<CustomField>
    <fullName>ARR_Growth__c</fullName>
    <description>Incremental Change in total ARR from the previous Renewal opportunity</description>
    <formula>/* New Formula:*/
if(AnnualRecurringRevenue__c &lt; Initial_ARR__c,AnnualRecurringRevenue__c/(1+ SBQQ__PrimaryQuote__r.First_Year_Price_Increase__c )- Initial_ARR__c,
AnnualRecurringRevenue__c - Initial_ARR__c - if(ISPICKVAL(Order_Type__c, &quot;Subscription Renewal&quot;),Initial_ARR__c*SBQQ__PrimaryQuote__r.SBQQ__RenewalUpliftRate__c,Initial_ARR__c * SBQQ__PrimaryQuote__r.First_Year_Price_Increase__c))

/* Old Formula:
Annual_Recurring_Revenue__c - Initial_ARR__c - Total_Price_Increase__c*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Incremental Change in total ARR from the previous Renewal opportunity</inlineHelpText>
    <label>Renewal ARR Growth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>