force-app/main/default/objects/Opportunity/fields/ARR_Without_OTD__c.field-meta.xml
<CustomField>
    <fullName>ARR_Without_OTD__c</fullName>
    <description>Annual Recurring Revenue without One-Time Discount applied.</description>
    <inlineHelpText>Annual Recurring Revenue without One-Time Discount applied.</inlineHelpText>
    <label>ARR Without OTD</label>
    <summarizedField>OpportunityLineItem.Annual_Recurring_Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>notEqual</operation>
        <value>One-Time Discount</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>