force-app/main/default/objects/Opportunity/fields/Authority__c.field-meta.xml
<CustomField>
    <fullName>Authority__c</fullName>
    <label>Persona/Authority</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>