force-app/main/default/objects/Opportunity/fields/Benefits__c.field-meta.xml
<CustomField>
    <fullName>Benefits__c</fullName>
    <inlineHelpText>For each problem, we know all the ways it will be of benefit if we fix it. We have examples for each benefit. Each benefit is quantified.</inlineHelpText>
    <label>Benefits</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>