force-app/main/default/objects/Opportunity/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>Populated by the QuoteTriggerHandler from the Primary Quote</description>
    <inlineHelpText>Billing Frequency from the Primary Quote</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__BillingFrequency</valueSetName>
    </valueSet>
</CustomField>