force-app/main/default/objects/Opportunity/fields/Bookings_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount__c</fullName>
    <description>Used as the forecasting amount pre-close, and the booking amount based on the quote at Close won 

Legacy Opps = ARR (Bookings)
Contract Renewal = Net New ARR 
Subscription Renewal = Price Increase 
Everything else = ARR</description>
    <inlineHelpText>Please populate with the forecasted Bookings Amount. This field will update when the Quote is edited and when the opp is closed, but can be updated throughout</inlineHelpText>
    <label>Bookings Amount (Total)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>