force-app/main/default/objects/Opportunity/fields/Bookings_Amount_Override__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount_Override__c</fullName>
    <inlineHelpText>Enter a value to override the Total Bookings Amount</inlineHelpText>
    <label>Bookings Amount Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>