force-app/main/default/objects/Opportunity/fields/Bookings_Amount_Test__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount_Test__c</fullName>
    <description>Testing Bookings Amount</description>
    <formula>if(  text(Order_Type__c)=&quot;Contract Renewal&quot;,  ARR_Growth__c ,
if(  text(Order_Type__c)=&quot;Subscription Renewal&quot;,   Total_Price_Increase__c  ,
if(  NOT(ISBLANK(ARR_Bookings__c )) &amp;&amp;  SBQQ__PrimaryQuote__c=null &amp;&amp; ARR_Bookings__c &gt; 0, ARR_Bookings__c,
if(  SBQQ__PrimaryQuote__c=null,Amount,
Annual_Recurring_Revenue__c
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bookings Amount Test</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>