force-app/main/default/objects/Opportunity/fields/Bookings_Amount_Won__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount_Won__c</fullName>
    <description>Formula field used for Conversion rate reporting</description>
    <formula>IF( IsWon, Bookings_Amount__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field used for Conversion rate reporting</inlineHelpText>
    <label>Bookings Amount Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>