force-app/main/default/objects/Opportunity/fields/Bookings_Amount_XF_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Amount_XF_Snapshot__c</fullName>
    <description>DO NOT ADD TO REPORTS - SNAPSHOT FIELD TO TRACK</description>
    <label>Bookings Amount (XF) Snapshot</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>