force-app/main/default/objects/Opportunity/fields/Bookings_Incent_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Incent_Rollup__c</fullName>
    <label>Bookings Incent Rollup</label>
    <summarizedField>OpportunityLineItem.Product_Bookings_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Line_Natural__c</field>
        <operation>contains</operation>
        <value>Incent</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>