force-app/main/default/objects/Opportunity/fields/Bookings_Other__c.field-meta.xml
<CustomField>
    <fullName>Bookings_Other__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The planned bookings amount for Other subscription tools except for Incent or XF. Can be manually entered but will be overridden once a primary quote is added onto the opportunity.</inlineHelpText>
    <label>Bookings Amount (Other)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>