force-app/main/default/objects/Opportunity/fields/Bookings_XF__c.field-meta.xml
<CustomField>
    <fullName>Bookings_XF__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The planned bookings amount for Xactly Forecasting (XF). Can be manually entered but will be overridden once a primary quote is added onto the opportunity.</inlineHelpText>
    <label>Bookings Amount (XF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>