force-app/main/default/objects/Opportunity/fields/Bookings_XF_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Bookings_XF_Rollup__c</fullName>
    <label>Bookings XF Rollup</label>
    <summarizedField>OpportunityLineItem.Product_Bookings_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Line_Natural__c</field>
        <operation>equals</operation>
        <value>Xactly Forecasting</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>