force-app/main/default/objects/Opportunity/fields/Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check this box if budget for the project has been approved</description>
    <label>Budget Available Based on +/-35%</label>
    <type>Checkbox</type>
</CustomField>