force-app/main/default/objects/Opportunity/fields/Budget_Text__c.field-meta.xml
<CustomField>
    <fullName>Budget_Text__c</fullName>
    <inlineHelpText>We understand how budgets are established. If no budget exists, we understand how this will be funded. We know the ROI metrics that they will use to justify the purchase and have examples for each. Each metric is identified, layered, and quantified. The internal justification process is mapped out.</inlineHelpText>
    <label>Budgeting/Funding Process</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>