force-app/main/default/objects/Opportunity/fields/CAPdb_Rating__c.field-meta.xml
<CustomField>
    <fullName>CAPdb_Rating__c</fullName>
    <description>Pulls data from CAPdb Rating field on the Account object</description>
    <formula>Account.CAPdb_Rating__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls data from CAPdb Rating field on the Account object</inlineHelpText>
    <label>CAPdb Rating</label>
    <type>Text</type>
</CustomField>