force-app/main/default/objects/Opportunity/fields/Cash_Up_Front__c.field-meta.xml
<CustomField>
    <fullName>Cash_Up_Front__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the amount of cash paid up front that is incremental to the first 12 months of the contract</description>
    <label>Cash Up Front</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>