force-app/main/default/objects/Opportunity/fields/Catalyst__c.field-meta.xml
<CustomField>
    <fullName>Catalyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Records whoever is currently set as the Catalyst on the 3-2-1 Buyers Map</description>
    <inlineHelpText>Records whoever is currently set as the Catalyst on the 3-2-1 Buyers Map</inlineHelpText>
    <label>Catalyst</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Catalyst)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>