force-app/main/default/objects/Opportunity/fields/Catalyst_Key_Influencer_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Catalyst_Key_Influencer_Engagement__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Have I engaged a Catalyst/Supporter—or a Key Influencer if no Catalyst exists?</inlineHelpText>
    <label>Power Map: Key Influencer Engagemnt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I have identified a Catalyst or Key Influencer if no Catalyst exists</fullName>
            </value>
            <value>
                <fullName>3 - I have a Catalyst who is a supporter</fullName>
            </value>
            <value>
                <fullName>0 - No Catalyst or Key Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>