force-app/main/default/objects/Opportunity/fields/CDP_Attached__c.field-meta.xml
<CustomField>
    <fullName>CDP_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox that is automatically checked when a CDP is attached in box (for now it is manual but should be made automatic whenever possible)</description>
    <inlineHelpText>Required before moving to Stage 3</inlineHelpText>
    <label>CDP Attached</label>
    <type>Checkbox</type>
</CustomField>