force-app/main/default/objects/Opportunity/fields/CEA_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>CEA_Rep_Name__c</fullName>
    <label>CEA Rep Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brandon Cohen</fullName>
            </value>
            <value>
                <fullName>Josephine Bancheri</fullName>
            </value>
            <value>
                <fullName>Nick Hudson</fullName>
            </value>
            <value>
                <fullName>Mike Barnes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>