force-app/main/default/objects/Opportunity/fields/Challenges__c.field-meta.xml
<CustomField>
    <fullName>Challenges__c</fullName>
    <inlineHelpText>If this Opportunity has a Primary Value Map, anything entered here will synchronize to that Value Map.</inlineHelpText>
    <label>Challenges</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>