force-app/main/default/objects/Opportunity/fields/Check_for_if_PO_is_required__c.field-meta.xml
<CustomField>
    <fullName>Check_for_if_PO_is_required__c</fullName>
    <label>Check for PO number if required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>