force-app/main/default/objects/Opportunity/fields/Chrous_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Chrous_Tracker__c</fullName>
    <description>Information from your meetings with Chorus (automatically tracked)</description>
    <inlineHelpText>Information from your meetings with Chorus (automatically tracked)</inlineHelpText>
    <label>Chrous Tracker</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>