force-app/main/default/objects/Opportunity/fields/Clarizen_Project__c.field-meta.xml
<CustomField>
    <fullName>Clarizen_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used by the Clarizen (Planview) integration</description>
    <label>Clarizen Project</label>
    <referenceTo>CLZV6BP__Clarizen_Project__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>