force-app/main/default/objects/Opportunity/fields/Close_Date_Push_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Push_Reason__c</fullName>
    <label>Close Date Push Reason</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>