force-app/main/default/objects/Opportunity/fields/ClosePlan_Scorecard__c.field-meta.xml
<CustomField>
    <fullName>ClosePlan_Scorecard__c</fullName>
    <formula>ClosePlan_Scorecard_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically populated % based on the deal scorecard % via ClosePlan</inlineHelpText>
    <label>Deal Scorecard %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>