force-app/main/default/objects/Opportunity/fields/ClosePlan_Scorecard_Score__c.field-meta.xml
<CustomField>
    <fullName>ClosePlan_Scorecard_Score__c</fullName>
    <label>ClosePlan Scorecard %</label>
    <summarizedField>TSPC__Deal__c.TSPC__ScorecardScoreRatio__c</summarizedField>
    <summaryForeignKey>TSPC__Deal__c.TSPC__Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>