force-app/main/default/objects/Opportunity/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Comments pulled from old system</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>