force-app/main/default/objects/Opportunity/fields/Comp_Plans_Received__c.field-meta.xml
<CustomField>
    <fullName>Comp_Plans_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in validation for stage 3</description>
    <inlineHelpText>Confirms that comp plans, reports, or sample data has been received, needed for Stage 3</inlineHelpText>
    <label>Plans/Reports/Sample Data Received</label>
    <type>Checkbox</type>
</CustomField>