force-app/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Required for stage 3</description>
    <inlineHelpText>Has a compelling event for why they need to purchase a system this quarter been identified?</inlineHelpText>
    <label>Compelling Event</label>
    <type>Checkbox</type>
</CustomField>