force-app/main/default/objects/Opportunity/fields/Competitive_Differentiation__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Differentiation__c</fullName>
    <description>Field used for VVS (Vista Value Selling) Closing Plan</description>
    <inlineHelpText>Have I surfaced all likely alternatives and have I demonstrated effectively how we’re stronger/better?</inlineHelpText>
    <label>Value Map: Competitive Differentiation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - I&apos;ve just started capturing this information</fullName>
            </value>
            <value>
                <fullName>2 - I know most competitors/alternatives</fullName>
            </value>
            <value>
                <fullName>3 - I know all competitors/ alternatives and the key buyers have confirmed that we&apos;re stronger</fullName>
            </value>
            <value>
                <fullName>0 - Inadequate differentiation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>