force-app/main/default/objects/Opportunity/fields/Competitive_Status__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Status__c</fullName>
    <label>Competitive Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Leading</fullName>
            </value>
            <value>
                <fullName>Even</fullName>
            </value>
            <value>
                <fullName>Behind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>